fix ccar price comma position

--- a/views/faq.jade
+++ b/views/faq.jade
@@ -9,8 +9,11 @@ block content
 				p <strong>Is this site owned or operated by Uber?</strong><br>
 					|Nope. The fare estimates come direct from uber. The site otherwise has no relationship to Uber whatsoever.
 				p <br><strong>How accurate is this thing?</strong><br>
-					|The margin of error is probably within 10%. The driving estimates take into account current traffic conditions on the route thanks to info from Google Maps. There are other variables involved however which you can tweak in the settings. Uber extimates are current and should closely match what you'll see in Uber's app.
+					|On the single journey tab the margin of error is probably within 5%. The driving estimates take into account current traffic conditions so should be pretty accurate. Uber estimates are current and should closely match what you'll see in Uber's app.
+					|<br>Calculating cost of car ownership is a bit more complicated as there are more factors involved. So take the results with a pinch of salt. Tweak the options in the settings for higher accuracy (and try to be realistic about your car's market value :P).
 				p<br><strong>What is the point of this?</strong><br>
 					|If you think an Uber is always so much more expensive than driving that comparing the two is almost pointless, you probably live in the west. In other parts of the world cost of labour is relatively cheap and hence ubers cost a lot less. Getting an Uber is only slighly more expensive than driving and pools are even cheaper sometimes. So the small cost difference between the two for certain journeys can make driving not worth the hassle.
+				p<br><strong>Who made this?</strong><br>
+					a(href="http://nishil.in") This guy
 			.mdl-cell.mdl-cell--12-col
 				a(href="/") Back
