--- a/views/index.jade
+++ b/views/index.jade
@@ -145,7 +145,7 @@ block content
 									| Back
 					.mdl-tabs__panel(id="settings")
 						.mdl-grid.mdl-cell.mdl-cell--12-col.mdl-grid--no-spacing(id="settings_info")
-								span Tweak things around. SEttings apply to both single journey and car ownership tabs.
+								span Tweak things around. Settings apply to both single journey and car ownership tabs.
 						.mdl-grid.mdl-cell.mdl-cell--12-col.mdl-color--white.mdl-shadow--2dp
 							//-Settings ---------------------------------------------------
 							.mdl-cell.mdl-cell--8-col
