--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,9 @@ block content
 			.mdl-grid(id="main_grid")
 				//- Title
 				.mdl-cell.mdl-cell--12-col
-					h2= title
+					a(href="/")
+						img.mdl-cell.mdl-cell--8-col(src="images/uod.png")
+					//- h2= title
 					//-h6= "Cost of driving compared with realtime fare estimates from Uber"
 				//- Tabs
 				.mdl-tabs.mdl-js-tabs.mdl-js-ripple-effect
