--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,8 @@ html
 		<![endif]-->
 
 		//- material-design-lite
-		link(rel='stylesheet', href='/bower_components/material-design-lite/material.min.css')
+		//-link(rel='stylesheet', href='/bower_components/material-design-lite/material.min.css')
+		link(rel='stylesheet', href='https://code.getmdl.io/1.3.0/material.deep_purple-amber.min.css')
 		script(src='/bower_components/material-design-lite/material.min.js')
 		link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700')
 		
