footer download icon

--- a/views/index.jade
+++ b/views/index.jade
@@ -199,7 +199,9 @@ block content
 								//a(href='/') uberordrive.com
 							ul.mdl-mini-footer__link-list
 								li
-									a(href='#') <strong>Get the app</strong> 
+									a(href='https://play.google.com/store/apps/details?id=com.uberordrive.uod&hl=en')
+										i.material-icons get_app
+										| <strong>Get the app</strong></a>
 								li
 									a(href='/faq') FAQ
 		//-	
@@ -209,6 +211,9 @@ block content
 				.mdl-dialog__actions
 					button(type="button", class="mdl-button close") OK
 					//button(type="button", class="mdl-button close") Disagree
+		//- jQuery
+		script(src='/bower_components/jquery/dist/jquery.min.js')
+		script(src='/bower_components/material-design-lite/material.min.js')
 		script(type='text/javascript').
 			var local_geoip_country_code = !{JSON.stringify(geoip_country_code)}
 		script(type='text/javascript').
