--- a/views/index.jade
+++ b/views/index.jade
@@ -213,9 +213,9 @@ block content
 					//button(type="button", class="mdl-button close") Disagree
 		
 		script(type='text/javascript').
-			var local_geoip_country_code = !{JSON.stringify(geoip_country_code)}
+			var local_geoip_country_code = !{(JSON.stringify(geoip_country_code))?JSON.stringify(geoip_country_code):'"nil"'}
 		script(type='text/javascript').
-			var local_geoip_city = !{JSON.stringify(geoip_city)}
+			var local_geoip_city = !{(JSON.stringify(geoip_city))?JSON.stringify(geoip_city):'"nil"'}
 		script(type='text/javascript').
 			var local_geoip_latitude = !{JSON.stringify(geoip_latitude)}
 		script(type='text/javascript').
