--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html
 
 		//- google stuff
 		meta(name="description", content="Cost of driving compared with realtime fare estimates from Uber")
+		meta(name="keywords", content="uber,uber vs drive,cost comparison,driving vs uber,uber vs driving")
 		meta(name="google-site-verification", content="SxtFjVUdixHuwHr3AWijlKEHzcZd0q9OxfGiP1_ZRRs")
 
 		
